# ATM-Project

./: ATM.cpp  ATM.h  CMakeLists.txt  Colectie.cpp  Colectie.h  List.h  Node.h  README.md  Service.cpp  Service.h  Tranzactie.cpp  Tranzactie.h  UI.cpp  UI.h  VectorDinamic.cpp  VectorDinamic.h  date.in  main.cpp
Test/: Test_colectie.cpp  Test_colectie.h
